# repro_mental_image_recon

./: .gitmodules  LICENSE  README.md  download_brain_features.py  download_vqgan_model.sh  pyproject.toml  setup_resources.sh  setup_vqgan_model.sh
scripts/config/: config_KS_mod.yaml  demo_params.yaml
scripts/create_figure_assets/: Fig2C_assets.py  Fig2D_assets.py  Fig3_assets.py  Fig4_assets.py  Fig5B_assets.py  Fig5c-e_assets.py  fig_utils.py  figure_asset_utils.py
scripts/experiments/: compare_SGD_SGLD_recon_for_eval_sampling_variance.py  evaluate_pairwise_identification_koide_majima_loss_methodwise.py  evaluate_pairwise_identification_pixel.py  recon_func_mod_KS.py  recon_image_koide-majima_methods_multi_times_no_seed.py  replicate_original_analysis.py
scripts/experiments/preference_analysis/: run_preference_analysis.py  run_preference_analysis.sh
