[project]
name = "repro_mental_image_recon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "gdown>=5.2.0",
    "tqdm>=4.66.4",
    "ipykernel>=6.29.5",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "numpy>=1.24.4",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "ipympl>=0.9.3",
    "ipywidgets>=8.1.1",
    "bdpy",
    "torchmetrics>=1.2.1",
    "pip>=24.1.2",
    "pyyaml>=6.0.1",
    "typing-extensions>=4.12.2",
    "timm==0.4.12",
    "dill>=0.3.8",
    "ninja>=1.11.1.1",
    "hydra-core>=1.3.2",
    "scikit-image>=0.24.0",
    "dreamsim>=0.2.1",
    "clip",
    "pytorch-lightning>=2.3.1",
    "einops>=0.8.1",
]

[tool.uv.sources]
bdpy = { git = "https://github.com/KamitaniLab/bdpy.git", rev = "d86199f"}
clip = { git = "https://github.com/openai/CLIP.git", rev = "dcba3cb" }
torch = [
    { index = "torch-cu128" },
]

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
